k8s/player-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: player
  template:
    metadata:
      labels:
        component: player
    spec:
#      volumes:
#        - name: player-storage
#          persistentVolumeClaim:
#            claimName: player-vol-claim
      containers:
        - name: player
          image: datarhei/restreamer
          ports:
            - containerPort: 8080
#          volumeMounts:
#            - mountPath: /restreamer
#              name: player-storage
#              subPath: db
