k8s/player-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: player
  ports:
  - port: 8080
    targetPort: 8080
