k8s/rtmp-ingest-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-ingest-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: steam-input
    port: 1935
    targetPort: 1935
