k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
#   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: rtmp-ingest-cluster-ip-service
              servicePort: 1935
          - path: /stats
            backend:
              serviceName: rtmp-ingest-cluster-ip-service
              servicePort: 8080
          - pathType: Prefix
            path: /player
            backend:
              serviceName: player-cluster-ip-service
              servicePort: 8080
